--- a/parameters.yaml
+++ b/parameters.yaml
@@ -1,4 +1,4 @@
-request_type: "citizenship" #this value should be either "citizenship" or "passport"
+request_type: "passport" #this value should be either "citizenship" or "passport"
 # Only use the following if using for passport:
 has_under_age_children: "No" #Yes or No
 total_children: "0" # Total number of children
